# rendering

./: .gitignore  CMakeLists.txt  readme.txt
buildtesting/: makefile
buildtesting/src/: test.cpp
buildtesting/src/pog/: pog.cpp  pog.hpp
src/: CMakeLists.txt  globals.h  main.cpp
src/Renderer/: CMakeLists.txt  MandelbrotRenderer.cpp  MandelbrotRenderer.h  Renderer.h
src/Renderer/Mandelbrot/: MandelbrotRenderer.cpp  MandelbrotRenderer.h
src/Renderer/Raytracer/: CMakeLists.txt  Raytracer.cpp  Raytracer.h
src/subdir/: pog.cpp  pog.h
